Fixed grid blowout that caused content to overflow horizontaly

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -92,6 +92,8 @@ h3 {
 
 .page {
   grid-area: 1 / 1 / 1 / 1;
+  min-width: 0;
+  
   @media (max-width: $size-lg) {
     &.container {
       max-width: calc(100vw - 30px);
